fixed paragraph breaks in services_section

--- a/wes_site/css/main.css
+++ b/wes_site/css/main.css
@@ -235,9 +235,6 @@ a.view_our_work {
   #services_section .column.col_1  {   
     margin-right: 45px;
   }
-  #services_section .column p { 
-    margin-bottom: 20px;
-  }
 
 /***** BANNER *****/
 #banner {
